update of advice section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <main class="main container">
-  <p class="advice-p">advice <span class="advice-id">#111</span></p>
-  <h1 class="advice-text">❝It is easy to sit up and take notice, what's difficult is getting up and taking action.❞</h1>
+  <p class="advice-p"><span class="advice-id"></span></p>
+  <h1 class="advice-text"></h1>
   <div class="divider"></div>
   <div class="icon-dice-container">
     <img src="images/icon-dice.svg" alt="icon dice" class="icon-dice">
